length issue fixed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="col-8 border-left">
                 
-                <div class="recipes" v-if="recipes.length">
+                <div class="recipes">
                         
                     <div class="col-12 mb-2" v-for="recipe in recipes">
 
@@ -59,10 +59,6 @@
 
                         </div>
                     </div>
-                </div>
-
-                <div v-else>
-                    List of recipes empty...
                 </div>
             </div>
         </div>
